implementations/rust/ockam/ockam/tests/node/std/fail_if_unused_context.stderr
error: Unused `_ctx`. Passed `ockam::Context` should be used.
 --> $DIR/tests/node/std/fail_if_unused_context.rs:5:15
  |
5 | async fn main(_ctx: ockam::Context) {
  |               ^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/tests/node/std/fail_if_unused_context.rs:4:1
  |
4 | / #[ockam::node]
5 | | async fn main(_ctx: ockam::Context) {
6 | |     // _ctx.stop().unwrap();
7 | |     let _x = 42 as u8;
8 | | }
  | |_^ consider adding a `main` function to `$DIR/tests/node/std/fail_if_unused_context.rs`
